[package]
name = "md2src"
description = "Markdown to source. Extracts code blocks marked with triple backticks into files."
version = "0.0.1"
authors = ["Alexander Willner <alex@willner.ws>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/AlexanderWillner/md2src"
repository = "https://github.com/AlexanderWillner/md2src"
documentation = "https://github.com/AlexanderWillner/md2src"
readme = "README.md"
keywords = ["markdown"]
categories = ["command-line-utilities"]

[dependencies]
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
# clap = "3.0.0-beta.1"
